added configuration for landscape

--- a/src/main/resources/templates/sample.html
+++ b/src/main/resources/templates/sample.html
@@ -20,9 +20,51 @@
             <th>Department</th>
             <th>Roll</th>
             <th>Mobile</th>
+
+            <th>Id</th>
+            <th>Name</th>
+            <th>Session</th>
+            <th>Department</th>
+            <th>Roll</th>
+            <th>Mobile</th>
+
+            <th>Id</th>
+            <th>Name</th>
+            <th>Session</th>
+            <th>Department</th>
+            <th>Roll</th>
+            <th>Mobile</th>
+
+            <th>Id</th>
+            <th>Name</th>
+            <th>Session</th>
+            <th>Department</th>
+            <th>Roll</th>
+            <th>Mobile</th>
         </tr>
 
         <tr th:each="student : ${studentList}">
+            <td th:text="${student.id}"></td>
+            <td th:text="${student.name}"></td>
+            <td th:text="${student.session}"></td>
+            <td th:text="${student.department}"></td>
+            <td th:text="${student.roll}"></td>
+            <td th:text="${student.mobile}"></td>
+
+            <td th:text="${student.id}"></td>
+            <td th:text="${student.name}"></td>
+            <td th:text="${student.session}"></td>
+            <td th:text="${student.department}"></td>
+            <td th:text="${student.roll}"></td>
+            <td th:text="${student.mobile}"></td>
+
+            <td th:text="${student.id}"></td>
+            <td th:text="${student.name}"></td>
+            <td th:text="${student.session}"></td>
+            <td th:text="${student.department}"></td>
+            <td th:text="${student.roll}"></td>
+            <td th:text="${student.mobile}"></td>
+
             <td th:text="${student.id}"></td>
             <td th:text="${student.name}"></td>
             <td th:text="${student.session}"></td>
