--- a/src/main/resources/templates/sample2.html
+++ b/src/main/resources/templates/sample2.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 
 <body>
 <div class="container">
-
+    <h1 style="text-align:center;">Report Generated With Wkhtmltopdf</h1>
+    <br/>
     <h1 style="text-align:center;">Students List</h1>
     <table class="table table-striped">
         <tr>
@@ -20,6 +23,7 @@
             <th>Department</th>
             <th>Roll</th>
             <th>Mobile</th>
+
         </tr>
 
         <tr th:each="student : ${studentList}">
@@ -33,7 +37,6 @@
 
     </table>
 
-    <a th:href="@{/getStudentsListAsPdf}">Download Pdf</a>
 </div>
 </body>
 </html>
